# sca-toolkit

./: .gitignore  LICENSE  main.py  pylintrc  pyproject.toml  readme.md  requirements.txt
.github/workflows/: python-app.yml
convert/: db_to_h5.py
devtools/: compress.py  db_to_h5.py  devtools.md  printH5.py
devtools/data_synthesis/: correlation_data.py  fake_h5_model.py
devtools/sql_to_h5/: convDBtoH5.py  convNxM_DbH5.py
docs/: docs.md  file_handling.md
src/: demo.ipynb
src/notscared/: NotScared.py  main.py
src/notscared/data_synthesis/: correlation_data.py
src/notscared/distinguishers/: cpa.py
src/notscared/file_handling/: readh5.py
src/notscared/models/: HammingDistance.py  HammingWeight.py  Model.py  utils.py
src/notscared/preprocessing/: SNR.py
src/notscared/statistics/: histogram.py  welford.py
src/notscared/tasks/: CPA.py  SNR.py  Task.py
src/notscared/utils/: leakage.py
tests/: test_SNR.py  test_notscared.py
