[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "notscared"
version = "0.0.1"
authors = [
  { name="Preston Petersen", email="" },
  { name="Jadon Procter", email="author@example.com" },
  { name="Lucian Haj", email="author@example.com" },
  { name="Shawn Robinson", email="robinss3@oregonstate.edu" },
]
description = "A high-performance SCA library for datasets that include NxM EM trace grids."
readme = "readme.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/decryptofy/notscared"
"Bug Tracker" = "https://github.com/decryptofy/notscared/issues"

[tool.autopep8]
ignore = "E501,W6"  # or ["E501", "W6"]
in-place = true
recursive = true
aggressive = 3
